# Quadrotor-UAV-Based-Search-and-Rescue-System

./: README.md
bearpi-pico_h3863-master/bearpi-pico_h3863-master/: 1.hiproj  README.md
bearpi-pico_h3863-master/bearpi-pico_h3863-master/analyzerJson/cfg/: funcptr.txt
bearpi-pico_h3863-master/bearpi-pico_h3863-master/application/ws63/ws63_liteos_application/: main.c
core code/core_code/: CMakeLists.txt
core code/core_code/planner/bspline_opt/src/: bspline_optimizer.cpp  gradient_descent_optimizer.cpp  uniform_bspline.cpp
core code/core_code/planner/path_searching/src/: dyn_a_star.cpp
core code/core_code/planner/plan_env/src/: grid_map.cpp  obj_predictor.cpp  raycast.cpp
core code/core_code/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
core code/core_code/planner/rosmsg_tcp_bridge/: CMakeLists.txt  package.xml
core code/core_code/planner/rosmsg_tcp_bridge/launch/: bridge.launch
core code/core_code/planner/rosmsg_tcp_bridge/src/: bridge_node.cpp
core code/core_code/planner/traj_utils/include/traj_utils/: polynomial_traj.h
core code/core_code/planner/traj_utils/src/: planning_visualization.cpp
core code/core_code/realflight_modules/px4ctrl/src/: controller.cpp  input.cpp  px4ctrl_node.cpp
core code/core_code/uav_simulator/so3_control/src/: SO3Control.cpp  control_example.cpp  so3_control_nodelet.cpp
core code/core_code/uav_simulator/so3_quadrotor_simulator/src/: quadrotor_simulator_so3.cpp
core code/core_code/uav_simulator/so3_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
(+565 files in other folders)
